--- a/testapidocs/src-html/org/microbean/kubernetes/controller/cdi/TestEventDistribution.html
+++ b/testapidocs/src-html/org/microbean/kubernetes/controller/cdi/TestEventDistribution.html
@@ -26,13 +26,13 @@
 <span class="sourceLineNo">018</span><a name="line.18"></a>
 <span class="sourceLineNo">019</span>import java.lang.annotation.Documented;<a name="line.19"></a>
 <span class="sourceLineNo">020</span>import java.lang.annotation.ElementType;<a name="line.20"></a>
-<span class="sourceLineNo">021</span>import java.lang.annotation.Inherited;<a name="line.21"></a>
-<span class="sourceLineNo">022</span>import java.lang.annotation.Retention;<a name="line.22"></a>
-<span class="sourceLineNo">023</span>import java.lang.annotation.RetentionPolicy;<a name="line.23"></a>
-<span class="sourceLineNo">024</span>import java.lang.annotation.Target;<a name="line.24"></a>
-<span class="sourceLineNo">025</span><a name="line.25"></a>
-<span class="sourceLineNo">026</span>import javax.enterprise.context.ApplicationScoped;<a name="line.26"></a>
-<span class="sourceLineNo">027</span>import javax.enterprise.context.BeforeDestroyed;<a name="line.27"></a>
+<span class="sourceLineNo">021</span>import java.lang.annotation.Retention;<a name="line.21"></a>
+<span class="sourceLineNo">022</span>import java.lang.annotation.RetentionPolicy;<a name="line.22"></a>
+<span class="sourceLineNo">023</span>import java.lang.annotation.Target;<a name="line.23"></a>
+<span class="sourceLineNo">024</span><a name="line.24"></a>
+<span class="sourceLineNo">025</span>import java.util.Optional;<a name="line.25"></a>
+<span class="sourceLineNo">026</span><a name="line.26"></a>
+<span class="sourceLineNo">027</span>import javax.enterprise.context.ApplicationScoped;<a name="line.27"></a>
 <span class="sourceLineNo">028</span>import javax.enterprise.context.Initialized;<a name="line.28"></a>
 <span class="sourceLineNo">029</span><a name="line.29"></a>
 <span class="sourceLineNo">030</span>import javax.enterprise.event.Observes;<a name="line.30"></a>
@@ -45,59 +45,59 @@
 <span class="sourceLineNo">037</span>import io.fabric8.kubernetes.api.model.ConfigMap;<a name="line.37"></a>
 <span class="sourceLineNo">038</span>import io.fabric8.kubernetes.api.model.ConfigMapList;<a name="line.38"></a>
 <span class="sourceLineNo">039</span>import io.fabric8.kubernetes.api.model.DoneableConfigMap;<a name="line.39"></a>
-<span class="sourceLineNo">040</span>import io.fabric8.kubernetes.api.model.HasMetadata;<a name="line.40"></a>
-<span class="sourceLineNo">041</span><a name="line.41"></a>
-<span class="sourceLineNo">042</span>import io.fabric8.kubernetes.client.KubernetesClient;<a name="line.42"></a>
-<span class="sourceLineNo">043</span><a name="line.43"></a>
-<span class="sourceLineNo">044</span>import io.fabric8.kubernetes.client.dsl.base.HasMetadataOperation;<a name="line.44"></a>
-<span class="sourceLineNo">045</span>import io.fabric8.kubernetes.client.dsl.MixedOperation;<a name="line.45"></a>
-<span class="sourceLineNo">046</span>import io.fabric8.kubernetes.client.dsl.Operation;<a name="line.46"></a>
-<span class="sourceLineNo">047</span>import io.fabric8.kubernetes.client.dsl.Resource;<a name="line.47"></a>
+<span class="sourceLineNo">040</span><a name="line.40"></a>
+<span class="sourceLineNo">041</span>import io.fabric8.kubernetes.client.KubernetesClient;<a name="line.41"></a>
+<span class="sourceLineNo">042</span><a name="line.42"></a>
+<span class="sourceLineNo">043</span>import io.fabric8.kubernetes.client.dsl.Operation;<a name="line.43"></a>
+<span class="sourceLineNo">044</span>import io.fabric8.kubernetes.client.dsl.Resource;<a name="line.44"></a>
+<span class="sourceLineNo">045</span><a name="line.45"></a>
+<span class="sourceLineNo">046</span>import org.junit.BeforeClass;<a name="line.46"></a>
+<span class="sourceLineNo">047</span>import org.junit.Test;<a name="line.47"></a>
 <span class="sourceLineNo">048</span><a name="line.48"></a>
-<span class="sourceLineNo">049</span>import org.junit.BeforeClass;<a name="line.49"></a>
-<span class="sourceLineNo">050</span>import org.junit.Test;<a name="line.50"></a>
-<span class="sourceLineNo">051</span><a name="line.51"></a>
-<span class="sourceLineNo">052</span>import org.microbean.main.Main;<a name="line.52"></a>
-<span class="sourceLineNo">053</span><a name="line.53"></a>
-<span class="sourceLineNo">054</span>import static org.junit.Assert.assertEquals;<a name="line.54"></a>
-<span class="sourceLineNo">055</span>import static org.junit.Assert.assertNotNull;<a name="line.55"></a>
-<span class="sourceLineNo">056</span>import static org.junit.Assume.assumeFalse;<a name="line.56"></a>
+<span class="sourceLineNo">049</span>import org.microbean.main.Main;<a name="line.49"></a>
+<span class="sourceLineNo">050</span><a name="line.50"></a>
+<span class="sourceLineNo">051</span>import static org.junit.Assert.assertEquals;<a name="line.51"></a>
+<span class="sourceLineNo">052</span>import static org.junit.Assert.assertNotNull;<a name="line.52"></a>
+<span class="sourceLineNo">053</span>import static org.junit.Assume.assumeFalse;<a name="line.53"></a>
+<span class="sourceLineNo">054</span><a name="line.54"></a>
+<span class="sourceLineNo">055</span>@ApplicationScoped<a name="line.55"></a>
+<span class="sourceLineNo">056</span>public class TestEventDistribution {<a name="line.56"></a>
 <span class="sourceLineNo">057</span><a name="line.57"></a>
-<span class="sourceLineNo">058</span>@ApplicationScoped<a name="line.58"></a>
-<span class="sourceLineNo">059</span>public class TestEventDistribution {<a name="line.59"></a>
-<span class="sourceLineNo">060</span><a name="line.60"></a>
-<span class="sourceLineNo">061</span>  <a name="line.61"></a>
-<span class="sourceLineNo">062</span>  /*<a name="line.62"></a>
-<span class="sourceLineNo">063</span>   * Static fields.<a name="line.63"></a>
-<span class="sourceLineNo">064</span>   */<a name="line.64"></a>
-<span class="sourceLineNo">065</span><a name="line.65"></a>
-<span class="sourceLineNo">066</span>  <a name="line.66"></a>
-<span class="sourceLineNo">067</span>  /**<a name="line.67"></a>
-<span class="sourceLineNo">068</span>   * The number of instances of this class that have been created (in<a name="line.68"></a>
-<span class="sourceLineNo">069</span>   * the context of JUnit execution; any other usage is undefined).<a name="line.69"></a>
-<span class="sourceLineNo">070</span>   */<a name="line.70"></a>
-<span class="sourceLineNo">071</span>  private static int instanceCount;<a name="line.71"></a>
-<span class="sourceLineNo">072</span><a name="line.72"></a>
-<span class="sourceLineNo">073</span><a name="line.73"></a>
-<span class="sourceLineNo">074</span>  /*<a name="line.74"></a>
-<span class="sourceLineNo">075</span>   * Constructors.<a name="line.75"></a>
-<span class="sourceLineNo">076</span>   */<a name="line.76"></a>
-<span class="sourceLineNo">077</span><a name="line.77"></a>
-<span class="sourceLineNo">078</span>  <a name="line.78"></a>
-<span class="sourceLineNo">079</span>  public TestEventDistribution() {<a name="line.79"></a>
-<span class="sourceLineNo">080</span>    super();<a name="line.80"></a>
-<span class="sourceLineNo">081</span>    instanceCount++;<a name="line.81"></a>
-<span class="sourceLineNo">082</span>  }<a name="line.82"></a>
-<span class="sourceLineNo">083</span><a name="line.83"></a>
-<span class="sourceLineNo">084</span>  @Produces<a name="line.84"></a>
-<span class="sourceLineNo">085</span>  @ApplicationScoped<a name="line.85"></a>
-<span class="sourceLineNo">086</span>  @AllConfigMapEvents<a name="line.86"></a>
-<span class="sourceLineNo">087</span>  private static final Operation&lt;ConfigMap, ConfigMapList, DoneableConfigMap, Resource&lt;ConfigMap, DoneableConfigMap&gt;&gt; selectAllConfigMaps(final KubernetesClient client) {<a name="line.87"></a>
-<span class="sourceLineNo">088</span>    return client.configMaps();<a name="line.88"></a>
+<span class="sourceLineNo">058</span>  <a name="line.58"></a>
+<span class="sourceLineNo">059</span>  /*<a name="line.59"></a>
+<span class="sourceLineNo">060</span>   * Static fields.<a name="line.60"></a>
+<span class="sourceLineNo">061</span>   */<a name="line.61"></a>
+<span class="sourceLineNo">062</span><a name="line.62"></a>
+<span class="sourceLineNo">063</span>  <a name="line.63"></a>
+<span class="sourceLineNo">064</span>  /**<a name="line.64"></a>
+<span class="sourceLineNo">065</span>   * The number of instances of this class that have been created (in<a name="line.65"></a>
+<span class="sourceLineNo">066</span>   * the context of JUnit execution; any other usage is undefined).<a name="line.66"></a>
+<span class="sourceLineNo">067</span>   */<a name="line.67"></a>
+<span class="sourceLineNo">068</span>  private static int instanceCount;<a name="line.68"></a>
+<span class="sourceLineNo">069</span><a name="line.69"></a>
+<span class="sourceLineNo">070</span><a name="line.70"></a>
+<span class="sourceLineNo">071</span>  /*<a name="line.71"></a>
+<span class="sourceLineNo">072</span>   * Constructors.<a name="line.72"></a>
+<span class="sourceLineNo">073</span>   */<a name="line.73"></a>
+<span class="sourceLineNo">074</span><a name="line.74"></a>
+<span class="sourceLineNo">075</span>  public TestEventDistribution() {<a name="line.75"></a>
+<span class="sourceLineNo">076</span>    super();<a name="line.76"></a>
+<span class="sourceLineNo">077</span>    instanceCount++;<a name="line.77"></a>
+<span class="sourceLineNo">078</span>  }<a name="line.78"></a>
+<span class="sourceLineNo">079</span><a name="line.79"></a>
+<span class="sourceLineNo">080</span>  @Produces<a name="line.80"></a>
+<span class="sourceLineNo">081</span>  @ApplicationScoped<a name="line.81"></a>
+<span class="sourceLineNo">082</span>  @AllConfigMapEvents<a name="line.82"></a>
+<span class="sourceLineNo">083</span>  private static final Operation&lt;ConfigMap, ConfigMapList, DoneableConfigMap, Resource&lt;ConfigMap, DoneableConfigMap&gt;&gt; selectAllConfigMaps(final KubernetesClient client) {<a name="line.83"></a>
+<span class="sourceLineNo">084</span>    return client.configMaps();<a name="line.84"></a>
+<span class="sourceLineNo">085</span>  }<a name="line.85"></a>
+<span class="sourceLineNo">086</span><a name="line.86"></a>
+<span class="sourceLineNo">087</span>  private final void onConfigMapSynchronizationAddition(@ObservesAsync @AllConfigMapEvents @Addition(synchronization = true) final ConfigMap configMap) {<a name="line.87"></a>
+<span class="sourceLineNo">088</span>    assertNotNull(configMap);<a name="line.88"></a>
 <span class="sourceLineNo">089</span>  }<a name="line.89"></a>
-<span class="sourceLineNo">090</span><a name="line.90"></a>
-<span class="sourceLineNo">091</span>  private final void onConfigMapEvent(@ObservesAsync @AllConfigMapEvents final org.microbean.kubernetes.controller.Event&lt;? extends HasMetadata&gt; event) {<a name="line.91"></a>
-<span class="sourceLineNo">092</span>    System.out.println("*** configMap event: " + event);<a name="line.92"></a>
+<span class="sourceLineNo">090</span>  <a name="line.90"></a>
+<span class="sourceLineNo">091</span>  private final void onConfigMapModification(@ObservesAsync @AllConfigMapEvents @Modification final ConfigMap configMap, @Prior final Optional&lt;ConfigMap&gt; prior) {<a name="line.91"></a>
+<span class="sourceLineNo">092</span>    assertNotNull(configMap);<a name="line.92"></a>
 <span class="sourceLineNo">093</span>    org.microbean.cdi.AbstractBlockingExtension.unblockAll();<a name="line.93"></a>
 <span class="sourceLineNo">094</span>  }<a name="line.94"></a>
 <span class="sourceLineNo">095</span><a name="line.95"></a>
