--- a/testapidocs/src-html/org/microbean/kubernetes/controller/cdi/TestEventDistribution.html
+++ b/testapidocs/src-html/org/microbean/kubernetes/controller/cdi/TestEventDistribution.html
@@ -30,106 +30,116 @@
 <span class="sourceLineNo">022</span>import java.lang.annotation.RetentionPolicy;<a name="line.22"></a>
 <span class="sourceLineNo">023</span>import java.lang.annotation.Target;<a name="line.23"></a>
 <span class="sourceLineNo">024</span><a name="line.24"></a>
-<span class="sourceLineNo">025</span>import java.util.Optional;<a name="line.25"></a>
-<span class="sourceLineNo">026</span><a name="line.26"></a>
-<span class="sourceLineNo">027</span>import javax.enterprise.context.ApplicationScoped;<a name="line.27"></a>
-<span class="sourceLineNo">028</span>import javax.enterprise.context.Initialized;<a name="line.28"></a>
-<span class="sourceLineNo">029</span><a name="line.29"></a>
-<span class="sourceLineNo">030</span>import javax.enterprise.event.Observes;<a name="line.30"></a>
-<span class="sourceLineNo">031</span>import javax.enterprise.event.ObservesAsync;<a name="line.31"></a>
-<span class="sourceLineNo">032</span><a name="line.32"></a>
-<span class="sourceLineNo">033</span>import javax.enterprise.inject.Produces;<a name="line.33"></a>
+<span class="sourceLineNo">025</span>import java.util.HashMap;<a name="line.25"></a>
+<span class="sourceLineNo">026</span>import java.util.Map;<a name="line.26"></a>
+<span class="sourceLineNo">027</span>import java.util.Optional;<a name="line.27"></a>
+<span class="sourceLineNo">028</span><a name="line.28"></a>
+<span class="sourceLineNo">029</span>import javax.enterprise.context.ApplicationScoped;<a name="line.29"></a>
+<span class="sourceLineNo">030</span>import javax.enterprise.context.Initialized;<a name="line.30"></a>
+<span class="sourceLineNo">031</span><a name="line.31"></a>
+<span class="sourceLineNo">032</span>import javax.enterprise.event.Observes;<a name="line.32"></a>
+<span class="sourceLineNo">033</span>import javax.enterprise.event.ObservesAsync;<a name="line.33"></a>
 <span class="sourceLineNo">034</span><a name="line.34"></a>
-<span class="sourceLineNo">035</span>import javax.inject.Qualifier;<a name="line.35"></a>
+<span class="sourceLineNo">035</span>import javax.enterprise.inject.Produces;<a name="line.35"></a>
 <span class="sourceLineNo">036</span><a name="line.36"></a>
-<span class="sourceLineNo">037</span>import io.fabric8.kubernetes.api.model.ConfigMap;<a name="line.37"></a>
-<span class="sourceLineNo">038</span>import io.fabric8.kubernetes.api.model.ConfigMapList;<a name="line.38"></a>
-<span class="sourceLineNo">039</span>import io.fabric8.kubernetes.api.model.DoneableConfigMap;<a name="line.39"></a>
-<span class="sourceLineNo">040</span><a name="line.40"></a>
-<span class="sourceLineNo">041</span>import io.fabric8.kubernetes.client.KubernetesClient;<a name="line.41"></a>
+<span class="sourceLineNo">037</span>import javax.inject.Qualifier;<a name="line.37"></a>
+<span class="sourceLineNo">038</span><a name="line.38"></a>
+<span class="sourceLineNo">039</span>import io.fabric8.kubernetes.api.model.ConfigMap;<a name="line.39"></a>
+<span class="sourceLineNo">040</span>import io.fabric8.kubernetes.api.model.ConfigMapList;<a name="line.40"></a>
+<span class="sourceLineNo">041</span>import io.fabric8.kubernetes.api.model.DoneableConfigMap;<a name="line.41"></a>
 <span class="sourceLineNo">042</span><a name="line.42"></a>
-<span class="sourceLineNo">043</span>import io.fabric8.kubernetes.client.dsl.Operation;<a name="line.43"></a>
-<span class="sourceLineNo">044</span>import io.fabric8.kubernetes.client.dsl.Resource;<a name="line.44"></a>
-<span class="sourceLineNo">045</span><a name="line.45"></a>
-<span class="sourceLineNo">046</span>import org.junit.BeforeClass;<a name="line.46"></a>
-<span class="sourceLineNo">047</span>import org.junit.Test;<a name="line.47"></a>
-<span class="sourceLineNo">048</span><a name="line.48"></a>
-<span class="sourceLineNo">049</span>import org.microbean.main.Main;<a name="line.49"></a>
+<span class="sourceLineNo">043</span>import io.fabric8.kubernetes.client.KubernetesClient;<a name="line.43"></a>
+<span class="sourceLineNo">044</span><a name="line.44"></a>
+<span class="sourceLineNo">045</span>import io.fabric8.kubernetes.client.dsl.Operation;<a name="line.45"></a>
+<span class="sourceLineNo">046</span>import io.fabric8.kubernetes.client.dsl.Resource;<a name="line.46"></a>
+<span class="sourceLineNo">047</span><a name="line.47"></a>
+<span class="sourceLineNo">048</span>import org.junit.BeforeClass;<a name="line.48"></a>
+<span class="sourceLineNo">049</span>import org.junit.Test;<a name="line.49"></a>
 <span class="sourceLineNo">050</span><a name="line.50"></a>
-<span class="sourceLineNo">051</span>import static org.junit.Assert.assertEquals;<a name="line.51"></a>
-<span class="sourceLineNo">052</span>import static org.junit.Assert.assertNotNull;<a name="line.52"></a>
-<span class="sourceLineNo">053</span>import static org.junit.Assume.assumeFalse;<a name="line.53"></a>
-<span class="sourceLineNo">054</span><a name="line.54"></a>
-<span class="sourceLineNo">055</span>@ApplicationScoped<a name="line.55"></a>
-<span class="sourceLineNo">056</span>public class TestEventDistribution {<a name="line.56"></a>
-<span class="sourceLineNo">057</span><a name="line.57"></a>
-<span class="sourceLineNo">058</span>  <a name="line.58"></a>
-<span class="sourceLineNo">059</span>  /*<a name="line.59"></a>
-<span class="sourceLineNo">060</span>   * Static fields.<a name="line.60"></a>
-<span class="sourceLineNo">061</span>   */<a name="line.61"></a>
-<span class="sourceLineNo">062</span><a name="line.62"></a>
-<span class="sourceLineNo">063</span>  <a name="line.63"></a>
-<span class="sourceLineNo">064</span>  /**<a name="line.64"></a>
-<span class="sourceLineNo">065</span>   * The number of instances of this class that have been created (in<a name="line.65"></a>
-<span class="sourceLineNo">066</span>   * the context of JUnit execution; any other usage is undefined).<a name="line.66"></a>
-<span class="sourceLineNo">067</span>   */<a name="line.67"></a>
-<span class="sourceLineNo">068</span>  private static int instanceCount;<a name="line.68"></a>
-<span class="sourceLineNo">069</span><a name="line.69"></a>
-<span class="sourceLineNo">070</span><a name="line.70"></a>
-<span class="sourceLineNo">071</span>  /*<a name="line.71"></a>
-<span class="sourceLineNo">072</span>   * Constructors.<a name="line.72"></a>
-<span class="sourceLineNo">073</span>   */<a name="line.73"></a>
-<span class="sourceLineNo">074</span><a name="line.74"></a>
-<span class="sourceLineNo">075</span>  public TestEventDistribution() {<a name="line.75"></a>
-<span class="sourceLineNo">076</span>    super();<a name="line.76"></a>
-<span class="sourceLineNo">077</span>    instanceCount++;<a name="line.77"></a>
-<span class="sourceLineNo">078</span>  }<a name="line.78"></a>
-<span class="sourceLineNo">079</span><a name="line.79"></a>
-<span class="sourceLineNo">080</span>  @Produces<a name="line.80"></a>
-<span class="sourceLineNo">081</span>  @ApplicationScoped<a name="line.81"></a>
-<span class="sourceLineNo">082</span>  @AllConfigMapEvents<a name="line.82"></a>
-<span class="sourceLineNo">083</span>  private static final Operation&lt;ConfigMap, ConfigMapList, DoneableConfigMap, Resource&lt;ConfigMap, DoneableConfigMap&gt;&gt; selectAllConfigMaps(final KubernetesClient client) {<a name="line.83"></a>
-<span class="sourceLineNo">084</span>    return client.configMaps();<a name="line.84"></a>
-<span class="sourceLineNo">085</span>  }<a name="line.85"></a>
-<span class="sourceLineNo">086</span><a name="line.86"></a>
-<span class="sourceLineNo">087</span>  private final void onConfigMapSynchronizationAddition(@ObservesAsync @AllConfigMapEvents @Addition(synchronization = true) final ConfigMap configMap) {<a name="line.87"></a>
-<span class="sourceLineNo">088</span>    assertNotNull(configMap);<a name="line.88"></a>
-<span class="sourceLineNo">089</span>  }<a name="line.89"></a>
-<span class="sourceLineNo">090</span>  <a name="line.90"></a>
-<span class="sourceLineNo">091</span>  private final void onConfigMapModification(@ObservesAsync @AllConfigMapEvents @Modification final ConfigMap configMap, @Prior final Optional&lt;ConfigMap&gt; prior) {<a name="line.91"></a>
-<span class="sourceLineNo">092</span>    assertNotNull(configMap);<a name="line.92"></a>
-<span class="sourceLineNo">093</span>    org.microbean.cdi.AbstractBlockingExtension.unblockAll();<a name="line.93"></a>
+<span class="sourceLineNo">051</span>import org.microbean.main.Main;<a name="line.51"></a>
+<span class="sourceLineNo">052</span><a name="line.52"></a>
+<span class="sourceLineNo">053</span>import static org.junit.Assert.assertEquals;<a name="line.53"></a>
+<span class="sourceLineNo">054</span>import static org.junit.Assert.assertNotNull;<a name="line.54"></a>
+<span class="sourceLineNo">055</span>import static org.junit.Assume.assumeFalse;<a name="line.55"></a>
+<span class="sourceLineNo">056</span><a name="line.56"></a>
+<span class="sourceLineNo">057</span>@ApplicationScoped<a name="line.57"></a>
+<span class="sourceLineNo">058</span>public class TestEventDistribution {<a name="line.58"></a>
+<span class="sourceLineNo">059</span><a name="line.59"></a>
+<span class="sourceLineNo">060</span>  <a name="line.60"></a>
+<span class="sourceLineNo">061</span>  /*<a name="line.61"></a>
+<span class="sourceLineNo">062</span>   * Static fields.<a name="line.62"></a>
+<span class="sourceLineNo">063</span>   */<a name="line.63"></a>
+<span class="sourceLineNo">064</span><a name="line.64"></a>
+<span class="sourceLineNo">065</span>  <a name="line.65"></a>
+<span class="sourceLineNo">066</span>  /**<a name="line.66"></a>
+<span class="sourceLineNo">067</span>   * The number of instances of this class that have been created (in<a name="line.67"></a>
+<span class="sourceLineNo">068</span>   * the context of JUnit execution; any other usage is undefined).<a name="line.68"></a>
+<span class="sourceLineNo">069</span>   */<a name="line.69"></a>
+<span class="sourceLineNo">070</span>  private static int instanceCount;<a name="line.70"></a>
+<span class="sourceLineNo">071</span><a name="line.71"></a>
+<span class="sourceLineNo">072</span><a name="line.72"></a>
+<span class="sourceLineNo">073</span>  /*<a name="line.73"></a>
+<span class="sourceLineNo">074</span>   * Constructors.<a name="line.74"></a>
+<span class="sourceLineNo">075</span>   */<a name="line.75"></a>
+<span class="sourceLineNo">076</span><a name="line.76"></a>
+<span class="sourceLineNo">077</span>  public TestEventDistribution() {<a name="line.77"></a>
+<span class="sourceLineNo">078</span>    super();<a name="line.78"></a>
+<span class="sourceLineNo">079</span>    instanceCount++;<a name="line.79"></a>
+<span class="sourceLineNo">080</span>  }<a name="line.80"></a>
+<span class="sourceLineNo">081</span><a name="line.81"></a>
+<span class="sourceLineNo">082</span>  @Produces<a name="line.82"></a>
+<span class="sourceLineNo">083</span>  @ApplicationScoped<a name="line.83"></a>
+<span class="sourceLineNo">084</span>  @AllConfigMapEvents<a name="line.84"></a>
+<span class="sourceLineNo">085</span>  private static final Operation&lt;ConfigMap, ConfigMapList, DoneableConfigMap, Resource&lt;ConfigMap, DoneableConfigMap&gt;&gt; selectAllConfigMaps(final KubernetesClient client) {<a name="line.85"></a>
+<span class="sourceLineNo">086</span>    return client.configMaps();<a name="line.86"></a>
+<span class="sourceLineNo">087</span>  }<a name="line.87"></a>
+<span class="sourceLineNo">088</span><a name="line.88"></a>
+<span class="sourceLineNo">089</span>  @Produces<a name="line.89"></a>
+<span class="sourceLineNo">090</span>  @ApplicationScoped<a name="line.90"></a>
+<span class="sourceLineNo">091</span>  @AllConfigMapEvents<a name="line.91"></a>
+<span class="sourceLineNo">092</span>  private static final Map&lt;Object, ConfigMap&gt; produceCache() {<a name="line.92"></a>
+<span class="sourceLineNo">093</span>    return new HashMap&lt;&gt;();<a name="line.93"></a>
 <span class="sourceLineNo">094</span>  }<a name="line.94"></a>
 <span class="sourceLineNo">095</span><a name="line.95"></a>
-<span class="sourceLineNo">096</span>  private final void onStartup(@Observes @Initialized(ApplicationScoped.class) final Object event, final KubernetesControllerExtension extension) throws InterruptedException {<a name="line.96"></a>
-<span class="sourceLineNo">097</span>    assertNotNull(extension);<a name="line.97"></a>
+<span class="sourceLineNo">096</span>  private final void onConfigMapSynchronizationAddition(@ObservesAsync @AllConfigMapEvents @Addition(synchronization = true) final ConfigMap configMap) {<a name="line.96"></a>
+<span class="sourceLineNo">097</span>    assertNotNull(configMap);<a name="line.97"></a>
 <span class="sourceLineNo">098</span>  }<a name="line.98"></a>
 <span class="sourceLineNo">099</span>  <a name="line.99"></a>
-<span class="sourceLineNo">100</span>  @Test<a name="line.100"></a>
-<span class="sourceLineNo">101</span>  public void testContainerStartup() {<a name="line.101"></a>
-<span class="sourceLineNo">102</span>    assumeFalse(Boolean.getBoolean("skipClusterTests"));<a name="line.102"></a>
-<span class="sourceLineNo">103</span>    System.setProperty("port", "8080");<a name="line.103"></a>
-<span class="sourceLineNo">104</span>    final int oldInstanceCount = instanceCount;<a name="line.104"></a>
-<span class="sourceLineNo">105</span>    assertEquals(1, oldInstanceCount);<a name="line.105"></a>
-<span class="sourceLineNo">106</span>    Main.main(null);<a name="line.106"></a>
-<span class="sourceLineNo">107</span>    assertEquals(oldInstanceCount + 1, instanceCount);<a name="line.107"></a>
+<span class="sourceLineNo">100</span>  private final void onConfigMapModification(@ObservesAsync @AllConfigMapEvents @Modification final ConfigMap configMap, @Prior final Optional&lt;ConfigMap&gt; prior, @AllConfigMapEvents final Map&lt;Object, ConfigMap&gt; cache) {<a name="line.100"></a>
+<span class="sourceLineNo">101</span>    assertNotNull(configMap);<a name="line.101"></a>
+<span class="sourceLineNo">102</span>    assertNotNull(cache);<a name="line.102"></a>
+<span class="sourceLineNo">103</span>    org.microbean.cdi.AbstractBlockingExtension.unblockAll();<a name="line.103"></a>
+<span class="sourceLineNo">104</span>  }<a name="line.104"></a>
+<span class="sourceLineNo">105</span><a name="line.105"></a>
+<span class="sourceLineNo">106</span>  private final void onStartup(@Observes @Initialized(ApplicationScoped.class) final Object event, final KubernetesControllerExtension extension) throws InterruptedException {<a name="line.106"></a>
+<span class="sourceLineNo">107</span>    assertNotNull(extension);<a name="line.107"></a>
 <span class="sourceLineNo">108</span>  }<a name="line.108"></a>
-<span class="sourceLineNo">109</span><a name="line.109"></a>
-<span class="sourceLineNo">110</span>  @BeforeClass<a name="line.110"></a>
-<span class="sourceLineNo">111</span>  public static void setUpLogging() {<a name="line.111"></a>
-<span class="sourceLineNo">112</span>    System.setProperty("java.util.logging.config.file", Thread.currentThread().getContextClassLoader().getResource("logging.properties").getPath());<a name="line.112"></a>
-<span class="sourceLineNo">113</span>  }<a name="line.113"></a>
-<span class="sourceLineNo">114</span><a name="line.114"></a>
-<span class="sourceLineNo">115</span>  @Documented<a name="line.115"></a>
-<span class="sourceLineNo">116</span>  @KubernetesEventSelector<a name="line.116"></a>
-<span class="sourceLineNo">117</span>  @Qualifier<a name="line.117"></a>
-<span class="sourceLineNo">118</span>  @Retention(value = RetentionPolicy.RUNTIME)<a name="line.118"></a>
-<span class="sourceLineNo">119</span>  @Target({ ElementType.METHOD, ElementType.PARAMETER })<a name="line.119"></a>
-<span class="sourceLineNo">120</span>  private @interface AllConfigMapEvents {<a name="line.120"></a>
-<span class="sourceLineNo">121</span><a name="line.121"></a>
-<span class="sourceLineNo">122</span>  }<a name="line.122"></a>
-<span class="sourceLineNo">123</span>  <a name="line.123"></a>
-<span class="sourceLineNo">124</span>}<a name="line.124"></a>
+<span class="sourceLineNo">109</span>  <a name="line.109"></a>
+<span class="sourceLineNo">110</span>  @Test<a name="line.110"></a>
+<span class="sourceLineNo">111</span>  public void testContainerStartup() {<a name="line.111"></a>
+<span class="sourceLineNo">112</span>    assumeFalse(Boolean.getBoolean("skipClusterTests"));<a name="line.112"></a>
+<span class="sourceLineNo">113</span>    System.setProperty("port", "8080");<a name="line.113"></a>
+<span class="sourceLineNo">114</span>    final int oldInstanceCount = instanceCount;<a name="line.114"></a>
+<span class="sourceLineNo">115</span>    assertEquals(1, oldInstanceCount);<a name="line.115"></a>
+<span class="sourceLineNo">116</span>    Main.main(null);<a name="line.116"></a>
+<span class="sourceLineNo">117</span>    assertEquals(oldInstanceCount + 1, instanceCount);<a name="line.117"></a>
+<span class="sourceLineNo">118</span>  }<a name="line.118"></a>
+<span class="sourceLineNo">119</span><a name="line.119"></a>
+<span class="sourceLineNo">120</span>  @BeforeClass<a name="line.120"></a>
+<span class="sourceLineNo">121</span>  public static void setUpLogging() {<a name="line.121"></a>
+<span class="sourceLineNo">122</span>    System.setProperty("java.util.logging.config.file", Thread.currentThread().getContextClassLoader().getResource("logging.properties").getPath());<a name="line.122"></a>
+<span class="sourceLineNo">123</span>  }<a name="line.123"></a>
+<span class="sourceLineNo">124</span><a name="line.124"></a>
+<span class="sourceLineNo">125</span>  @Documented<a name="line.125"></a>
+<span class="sourceLineNo">126</span>  @KubernetesEventSelector<a name="line.126"></a>
+<span class="sourceLineNo">127</span>  @Qualifier<a name="line.127"></a>
+<span class="sourceLineNo">128</span>  @Retention(value = RetentionPolicy.RUNTIME)<a name="line.128"></a>
+<span class="sourceLineNo">129</span>  @Target({ ElementType.METHOD, ElementType.PARAMETER })<a name="line.129"></a>
+<span class="sourceLineNo">130</span>  private @interface AllConfigMapEvents {<a name="line.130"></a>
+<span class="sourceLineNo">131</span><a name="line.131"></a>
+<span class="sourceLineNo">132</span>  }<a name="line.132"></a>
+<span class="sourceLineNo">133</span>  <a name="line.133"></a>
+<span class="sourceLineNo">134</span>}<a name="line.134"></a>
 
 
 
